--- a/OHSW_fatality_and_critical_injury.ipynb
+++ b/OHSW_fatality_and_critical_injury.ipynb
@@ -52,7 +52,7 @@
     "from scipy.stats import f_oneway,kruskal,shapiro\n",
     "from pymannkendall import original_test\n",
     "\n",
-    "# Define file paths (adjust if needed)\n",
+    "# Define file paths \n",
     "fatalities_path = \"fatalities.csv\"\n",
     "critical_injuries_path = \"critical_injuries.csv\"\n"
    ]
